--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         :root {
-            --primary: #6366f1;
-            --primary-light: #818cf8;
-            --accent: #f472b6;
-            --dark: #0f172a;
-            --dark-light: #1e293b;
-            --text: #e2e8f0;
-            --text-muted: #94a3b8;
-            --gradient: linear-gradient(135deg, #6366f1 0%, #8b5cf6 50%, #f472b6 100%);
+            --primary: #2563eb;
+            --primary-light: #3b82f6;
+            --accent: #1e40af;
+            --bg: #ffffff;
+            --bg-secondary: #f8fafc;
+            --text: #1e293b;
+            --text-muted: #64748b;
+            --border: #e2e8f0;
+            --gradient: linear-gradient(135deg, #2563eb 0%, #3b82f6 50%, #60a5fa 100%);
         }
 
         * {
@@ -29,13 +30,14 @@
 
         body {
             font-family: 'Inter', sans-serif;
-            background: var(--dark);
+            background: var(--bg);
             color: var(--text);
             line-height: 1.6;
         }
 
         h1, h2, h3, h4 {
             font-family: 'Space Grotesk', sans-serif;
+            color: var(--text);
         }
 
         /* Navigation */
@@ -49,7 +51,8 @@
             align-items: center;
             z-index: 1000;
             backdrop-filter: blur(10px);
-            background: rgba(15, 23, 42, 0.8);
+            background: rgba(255, 255, 255, 0.9);
+            border-bottom: 1px solid var(--border);
         }
 
         .logo {
@@ -96,7 +99,7 @@
             right: -20%;
             width: 80%;
             height: 150%;
-            background: radial-gradient(circle, rgba(99,102,241,0.15) 0%, transparent 60%);
+            background: radial-gradient(circle, rgba(37, 99, 235, 0.1) 0%, transparent 60%);
             animation: pulse 8s ease-in-out infinite;
         }
 
@@ -114,12 +117,12 @@
         .hero-tag {
             display: inline-block;
             padding: 0.5rem 1rem;
-            background: rgba(99,102,241,0.2);
+            background: rgba(37, 99, 235, 0.1);
             border-radius: 50px;
             font-size: 0.85rem;
             color: var(--primary-light);
             margin-bottom: 1.5rem;
-            border: 1px solid rgba(99,102,241,0.3);
+            border: 1px solid rgba(37, 99, 235, 0.2);
         }
 
         .hero h1 {
@@ -165,7 +168,7 @@
 
         .btn-primary:hover {
             transform: translateY(-2px);
-            box-shadow: 0 10px 30px rgba(99,102,241,0.4);
+            box-shadow: 0 10px 30px rgba(37, 99, 235, 0.3);
         }
 
         .btn-secondary {
@@ -203,7 +206,7 @@
 
         /* About Section */
         #about {
-            background: var(--dark-light);
+            background: var(--bg-secondary);
         }
 
         .about-grid {
@@ -226,13 +229,14 @@
         }
 
         .skill-item {
-            background: var(--dark);
+            background: var(--bg-secondary);
             padding: 1rem 1.25rem;
             border-radius: 12px;
             font-size: 0.9rem;
             display: flex;
             align-items: center;
             gap: 0.5rem;
+            border: 1px solid var(--border);
         }
 
         .skill-item::before {
@@ -272,7 +276,7 @@
             height: 14px;
             border-radius: 50%;
             background: var(--primary);
-            border: 3px solid var(--dark);
+            border: 3px solid var(--bg);
         }
 
         .timeline-date {
@@ -301,7 +305,7 @@
 
         /* Blog Section */
         #blog {
-            background: var(--dark-light);
+            background: var(--bg-secondary);
         }
 
         .blog-intro {
@@ -317,16 +321,16 @@
         }
 
         .blog-card {
-            background: var(--dark);
+            background: var(--bg);
             border-radius: 16px;
             overflow: hidden;
             transition: transform 0.3s;
-            border: 1px solid rgba(99,102,241,0.1);
+            border: 1px solid var(--border);
         }
 
         .blog-card:hover {
             transform: translateY(-5px);
-            border-color: rgba(99,102,241,0.3);
+            border-color: rgba(37, 99, 235, 0.2);
         }
 
         .blog-card-image {
@@ -345,7 +349,7 @@
         .blog-card-tag {
             display: inline-block;
             padding: 0.25rem 0.75rem;
-            background: rgba(99,102,241,0.2);
+            background: rgba(37, 99, 235, 0.1);
             border-radius: 50px;
             font-size: 0.75rem;
             color: var(--primary-light);
@@ -376,16 +380,16 @@
         }
 
         .project-card {
-            background: var(--dark-light);
+            background: var(--bg-secondary);
             border-radius: 16px;
             padding: 2rem;
-            border: 1px solid rgba(99,102,241,0.1);
+            border: 1px solid var(--border);
             transition: all 0.3s;
         }
 
         .project-card:hover {
             border-color: var(--primary);
-            box-shadow: 0 0 30px rgba(99,102,241,0.1);
+            box-shadow: 0 0 30px var(--border);
         }
 
         .project-icon {
@@ -425,15 +429,15 @@
 
         .project-tag {
             padding: 0.25rem 0.75rem;
-            background: var(--dark);
+            background: rgba(37, 99, 235, 0.1);
             border-radius: 50px;
             font-size: 0.75rem;
-            color: var(--text-muted);
+            color: var(--primary);
         }
 
         /* Contact Section */
         #contact {
-            background: var(--dark-light);
+            background: var(--bg-secondary);
             text-align: center;
         }
 
@@ -460,12 +464,12 @@
             align-items: center;
             gap: 0.5rem;
             padding: 1rem 1.5rem;
-            background: var(--dark);
+            background: var(--bg);
             border-radius: 12px;
             color: var(--text);
             text-decoration: none;
             transition: all 0.3s;
-            border: 1px solid transparent;
+            border: 1px solid var(--border);
         }
 
         .contact-link:hover {
@@ -479,6 +483,29 @@
             text-align: center;
             color: var(--text-muted);
             font-size: 0.9rem;
+            border-top: 1px solid var(--border);
+        }
+
+        /* SVG Icons */
+        .icon {
+            display: inline-block;
+            width: 1em;
+            height: 1em;
+            vertical-align: -0.125em;
+            fill: currentColor;
+        }
+
+        .icon-lg {
+            width: 2rem;
+            height: 2rem;
+        }
+
+        .contact-icon {
+            width: 1.25rem;
+            height: 1.25rem;
+            stroke: currentColor;
+            stroke-width: 2;
+            fill: none;
         }
 
         /* Mobile Responsive */
@@ -534,7 +561,7 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <span class="hero-tag">🚀 AI Builder & Program Leader</span>
+            <span class="hero-tag">AI Builder & Program Leader</span>
             <h1>Hi, I'm <span class="gradient-text">Eva Ouyang</span></h1>
             <p>Program Manager turned AI Builder. I transform complex operations into scalable systems, and I'm passionate about leveraging AI to amplify human potential.</p>
             <div class="cta-buttons">
@@ -611,17 +638,17 @@
         </div>
         <p class="blog-intro">Exploring the intersection of AI tools, automation, and operational excellence. Practical insights from someone who builds with AI every day.</p>
         <div class="blog-grid">
-            <article class="blog-card">
-                <div class="blog-card-image">🤖</div>
+            <a href="blog-headwriter.html" class="blog-card" style="text-decoration: none; color: inherit;">
+                <div class="blog-card-image"><svg class="icon-lg" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5"><path d="M12 20h9M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg></div>
                 <div class="blog-card-content">
                     <span class="blog-card-tag">AI Workflows</span>
-                    <h3>Building Your First AI-Powered QA System</h3>
-                    <p>How I designed an automated quality assurance workflow that improved output accuracy by 10%+ and cut rework time in half.</p>
-                    <p class="blog-card-date">Coming Soon</p>
+                    <h3>Building HeadWriter: When Copy-Pasting Between 5 LLMs Drove Me to Build My Own Tool</h3>
+                    <p>How I vibe-coded an agentic workflow that orchestrates multiple AI models to eliminate translationese.</p>
+                    <p class="blog-card-date">January 2026 · Read →</p>
                 </div>
-            </article>
+            </a>
             <article class="blog-card">
-                <div class="blog-card-image">⚡</div>
+                <div class="blog-card-image"><svg class="icon-lg" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5"><path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/></svg></div>
                 <div class="blog-card-content">
                     <span class="blog-card-tag">Automation</span>
                     <h3>n8n for Non-Engineers: A Practical Guide</h3>
@@ -630,7 +657,7 @@
                 </div>
             </article>
             <article class="blog-card">
-                <div class="blog-card-image">🎯</div>
+                <div class="blog-card-image"><svg class="icon-lg" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="12" r="6"/><circle cx="12" cy="12" r="2"/></svg></div>
                 <div class="blog-card-content">
                     <span class="blog-card-tag">Strategy</span>
                     <h3>From Program Manager to AI Builder</h3>
@@ -648,19 +675,19 @@
             <h2 class="section-title">Projects</h2>
         </div>
         <div class="projects-grid">
-            <div class="project-card">
-                <div class="project-icon">🎙️</div>
-                <h3>AI Localization Pipeline</h3>
-                <p class="company">Office of Reid Hoffman</p>
-                <p>End-to-end AI workflow for podcast localization with automated QA, feedback loops, and release readiness gates.</p>
+            <a href="https://github.com/manjingouyang2025-crypto/HeadWriter" target="_blank" class="project-card" style="text-decoration: none; color: inherit;">
+                <div class="project-icon"><svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5" style="width:1.5rem;height:1.5rem"><path d="M12 20h9M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg></div>
+                <h3>HeadWriter</h3>
+                <p class="company">Open Source · Vibe Coded</p>
+                <p>Agentic workflow that orchestrates 5 LLMs with a Lead Editor to eliminate translationese. Improved translation quality from 70% to 95%.</p>
                 <div class="project-tags">
-                    <span class="project-tag">AI Automation</span>
-                    <span class="project-tag">QA Systems</span>
-                    <span class="project-tag">Process Design</span>
+                    <span class="project-tag">Agentic AI</span>
+                    <span class="project-tag">Multi-LLM</span>
+                    <span class="project-tag">Vibe Coding</span>
                 </div>
-            </div>
+            </a>
             <div class="project-card">
-                <div class="project-icon">📊</div>
+                <div class="project-icon"><svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5" style="width:1.5rem;height:1.5rem"><path d="M18 20V10M12 20V4M6 20v-6"/></svg></div>
                 <h3>Executive Dashboard System</h3>
                 <p class="company">LinkedIn</p>
                 <p>Built and maintained dashboards tracking OKRs, initiative health, and operational risks for senior leadership.</p>
@@ -671,7 +698,7 @@
                 </div>
             </div>
             <div class="project-card">
-                <div class="project-icon">🌐</div>
+                <div class="project-icon"><svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5" style="width:1.5rem;height:1.5rem"><circle cx="12" cy="12" r="10"/><path d="M2 12h20M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/></svg></div>
                 <h3>Go Global Club</h3>
                 <p class="company">LinkedIn</p>
                 <p>Launched executive community of 2,000+ CEOs with board governance and engagement frameworks driving thought leadership.</p>
@@ -694,10 +721,12 @@
             <p>Interested in AI automation, program management, or just want to chat? I'd love to hear from you.</p>
             <div class="contact-links">
                 <a href="mailto:Manjing.Ouyang.2025@gmail.com" class="contact-link">
-                    ✉️ Email Me
+                    <svg class="contact-icon" viewBox="0 0 24 24"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg>
+                    Email Me
                 </a>
                 <a href="https://linkedin.com/in/evaouyang" target="_blank" class="contact-link">
-                    💼 LinkedIn
+                    <svg class="contact-icon" viewBox="0 0 24 24"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg>
+                    LinkedIn
                 </a>
             </div>
         </div>
